Embed hardened GraalPy SkyPilot bridge